src/assets/css/style.css
/* ... */
    .side-user-panel .side-user-img .su__meta {
      color: #808996;
      font-size: 15px;
      font-weight: 500; }
    .side-user-panel .side-user-img .avatar-icon {
      position: absolute;
      left: 58%;
      top: 63px;
      width: 30px;
      height: 30px;
      background-color: #40CC6F;
      line-height: 25px;
      -webkit-border-radius: 50%;
      -moz-border-radius: 50%;
      border-radius: 50%;
      font-size: 15px;
      -webkit-box-shadow: 0 0 40px rgba(82, 85, 90, 0.1);
      -moz-box-shadow: 0 0 40px rgba(82, 85, 90, 0.1);
      box-shadow: 0 0 40px rgba(82, 85, 90, 0.1);
      border: 3px solid #fff; }
      .side-user-panel .side-user-img .avatar-icon a {
        color: #fff; }
      .side-user-panel .side-user-img .avatar-icon .tooltip.top .tooltip-inner,
      .side-user-panel .side-user-img .avatar-icon .tooltip.bottom .tooltip-inner {
        background-color: #4a6f69;
        width: 120px;
        padding-top: 6px;
        padding-bottom: 6px; }
      .side-user-panel .side-user-img .avatar-icon .tooltip.top .tooltip-arrow {
        border-top-color: #4a6f69; }
  .side-user-panel .side-menu-ul {
    margin-top: 27px;
    margin-bottom: 30px;
    border-top: 1px solid #e4e4e4;
    padding-top: 25px; }
    .side-user-panel .side-menu-ul li:after {
      display: none; }
    .side-user-panel .side-menu-ul li a {
      color: #4a6f69;
      font-size: 15px;
      padding: 8px 18px;
      -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
      border-radius: 4px; }
      .side-user-panel .side-menu-ul li a:hover {
        background-color: #de5160;
        color: #fff; }
      .side-user-panel .side-menu-ul li a .user-icon {
        font-size: 16px; }
    .side-user-panel .side-menu-ul li .dropdown-divider {
      border-top: 1px solid #e4e4e4;
      margin-top: 12px;
      padding-bottom: 12px; }
    .side-user-panel .side-menu-ul li:last-child a .user-icon {
      color: #f00125; }
  .side-user-panel .side-user-search {
    text-align: center; }
    .side-user-panel .side-user-search .theme-btn {
      margin-top: 15px; }
  .side-user-panel.active {
    -webkit-transform: translateX(0);
    -moz-transform: translateX(0);
    -ms-transform: translateX(0);
    -o-transform: translateX(0);
    transform: translateX(0); }

/*======= header-area ========*/
.header-area {
  top: 0;
  width: 100%;
  z-index: 1010; }
  @media (max-width: 1199px) {
    .header-area {
      padding-top: 30px;
      padding-bottom: 30px; } }
  .header-area:after {
    position: absolute;
    content: '';
    bottom: 0;
    left: 0;
    width: 100%;
    height: 1px;
    background-color: #fff;
    opacity: 0.1; }

/*====================================================
    header-area 2
 ====================================================*/
.header-area2 .header-menu-wrapper {
  padding-right: 45px;
  padding-left: 45px; }
  @media (max-width: 1024px) {
    .header-area2 .header-menu-wrapper {
      padding-right: 0;
      padding-left: 0; } }

/*====================================================
    header-area 3
 ====================================================*/
.header-area3 .header-menu-wrapper {
  background-color: #fff; }
  @media (max-width: 1199px) {
    .header-area3 .header-menu-wrapper {
      padding-top: 30px;
      padding-bottom: 30px; } }

.header-area3 .main-menu-content nav ul li a {
  color: #4a6f69; }
  .header-area3 .main-menu-content nav ul li a:hover {
    color: #de5160; }

.header-area3 .logo-right-content .author-access-list li a {
  color: #4a6f69; }
  .header-area3 .logo-right-content .author-access-list li a.theme-btn {
    color: #fff; }
  .logo-right-content .author-access-list li .theme-btn svg {
      margin: -3px 3px 0 0;
  }

.header-area3 .side-menu-open {
  background-color: #4a6f69; }

.header-area3:after {
  display: none; }

/*====================================================
    header-area 4
 ====================================================*/
.List-map-view2 .header-area,
.List-map-view .header-area,
.booking-confirmation-page .header-area,
.header-area4,
.header-area5 {
  background-color: #f7f7f7; }
.List-map-view2 .card-area .col-lg-8 .twocol > * {
  flex: 0 0 50%;
  max-width: 50%;
}
.home-5 .map-container,
.List-map-view .map-container {
  margin-top: 90px;
}

/*===== report-modal =====*/
@media (min-width: 992px) {
  .modal-form .modal-dialog.modal-lg {
    width: 500px; } }

@media (max-width: 480px) {
  .modal-form .modal-dialog.modal-lg {
    width: auto; } }

.modal-form .modal-top {
  border-bottom: 1px solid #e4e4e4;
  margin-bottom: 38px;
  padding: 25px 30px 23px 30px; }
  .modal-form .modal-top .close-arrow {
    opacity: 1; }
    .modal-form .modal-top .close-arrow span {
      font-size: 24px;
      color: #4a6f69;
      -webkit-transition: all 0.3s;
      -moz-transition: all 0.3s;
      -ms-transition: all 0.3s;
      -o-transition: all 0.3s;
      transition: all 0.3s; }
      .modal-form .modal-top .close-arrow span:hover {
        color: #de5160;
        -webkit-transform: rotate(90deg);
        -moz-transform: rotate(90deg);
        -ms-transform: rotate(90deg);
        -o-transform: rotate(90deg);
        transform: rotate(90deg); }
  .modal-form .modal-top .modal-title {
    font-size: 20px;
    color: #4a6f69; }
    @media (max-width: 320px) {
      .modal-form .modal-top .modal-title {
        font-size: 16px; } }
    .modal-form .modal-top .modal-title span {
      color: #808996;
      font-size: 24px; }
  .modal-form .modal-top .modal-sub {
    font-weight: 600; }

.modal-form .alert-content .warning-icon {
  color: #f9b851;
  font-size: 60px;
  display: inline-block; }

.modal-form .alert-content .modal-title {
  line-height: 25px;
  font-weight: 600; }

.modal-form .contact-form-action {
  padding: 0 30px 30px 30px; }

.modal-form .btn-box .theme-btn {
  line-height: 40px; }

@media (max-width: 320px) {
  .modal-form .btn-box.text-right {
    text-align: left; } }
/* ... */

